
  - [bug] quoting is applied to the column names
    inside the WITH RECURSIVE clause of a
    common table expression according to the
    quoting rules for the originating Column.
    [ticket:2512]

  - [bug] Fixed regression introduced in 0.7.6
    whereby the FROM list of a SELECT statement
    could be incorrect in certain "clone+replace"
    scenarios.  [ticket:2518]

- engine
  - [bug] Fixed bug whereby
    a disconnect detect + dispose that occurs
    when the QueuePool has threads waiting
    for connections would leave those
    threads waiting for the duration of
    the timeout on the old pool (or indefinitely
    if timeout was disabled).  The fix
    now notifies those waiters with a special
    exception case and has them move onto
    the new pool.  [ticket:2522]

  - [feature] Dramatic improvement in memory
    usage of the event system; instance-level
    collections are no longer created for a
    particular type of event until
    instance-level listeners are established
    for that event.  [ticket:2516]

  - [bug] Added gaerdbms import to mysql/__init__.py,
    the absense of which was preventing the new
    GAE dialect from being loaded.  [ticket:2529]

  - [bug] Fixed cextension bug whereby the
    "ambiguous column error" would fail to
    function properly if the given index were
    a Column object and not a string.
    Note there are still some column-targeting
    issues here which are fixed in 0.8.
    [ticket:2553]

  - [bug] Fixed the repr() of Enum to include
    the "name" and "native_enum" flags.  Helps
    Alembic autogenerate.

- mysql
  - [bug] Updated mysqlconnector interface to use
    updated "client flag" and "charset" APIs,
    courtesy David McNelis.

- mssql
  - [bug] Fixed compiler bug whereby a given
    select() would be modified if it had an "offset"
    attribute, causing the construct to not compile
    correctly a second time.  [ticket:2545]

0.7.8
=====
- orm
  - [bug] Fixed bug whereby subqueryload() from